--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
                 <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                 <button class="sign-up-button">Sign up</button>
             </div>
-            <img src="./imgs/seattle-city-skyline.jpg" alt="this is a place holder of a image">
+            <img src="./imgs/seattle-street.jpg" alt="this is a place holder of a image">
         </div>
 
         <div class="two">
             <h2>Some random information</h2>
             <div class="info-cards">
                 <div class="info-card">
-                    <img src="imgs/seattle-city-skyline.jpg" alt="">
+                    <img src="imgs/seattle-street.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="info-card">
-                    <img src="imgs/seattle-city-skyline.jpg" alt="">
+                    <img src="imgs/seattle-street.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="info-card">
-                    <img src="imgs/seattle-city-skyline.jpg" alt="">
+                    <img src="imgs/seattle-street.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
                 <div class="info-card">
-                    <img src="imgs/seattle-city-skyline.jpg" alt="">
+                    <img src="imgs/seattle-street.jpg" alt="">
                     <div>this is some subtext under an illustration or image</div>
                 </div>
             </div>
